--- a/orders/.env
+++ b/orders/.env
@@ -1,2 +1,6 @@
 GRPC_ADDR="localhost:3000"
 CONSUL_ADDR="localhost:8500"
+AMQP_USER="guest"
+AMQP_PASS="guest"
+AMQP_HOST="localhost"
+AMQP_PORT="5672"
