[WIP] integrating stripe payment processing

--- a/payments/.env
+++ b/payments/.env
@@ -1,6 +1,8 @@
+GATEWAY_HTTP_ADDR="http://localhost:8000"
 GRPC_ADDR="localhost:3001"
 CONSUL_ADDR="localhost:8500"
 AMQP_USER="guest"
 AMQP_PASS="guest"
 AMQP_HOST="localhost"
 AMQP_PORT="5672"
+STRIPE_KEY=""
