[WIP] payment notification webhook

--- a/payments/.env
+++ b/payments/.env
@@ -1,4 +1,5 @@
 GATEWAY_HTTP_ADDR="http://localhost:8000"
+HTTP_ADDR="localhost:8001"
 GRPC_ADDR="localhost:3001"
 CONSUL_ADDR="localhost:8500"
 AMQP_USER="guest"
@@ -6,3 +7,4 @@ AMQP_PASS="guest"
 AMQP_HOST="localhost"
 AMQP_PORT="5672"
 STRIPE_KEY=""
+STRIPE_ENDPOINT_SECRET=""
