[WIP] fanning out order paid event

--- a/payments/.env
+++ b/payments/.env
@@ -6,5 +6,5 @@ AMQP_USER="guest"
 AMQP_PASS="guest"
 AMQP_HOST="localhost"
 AMQP_PORT="5672"
-STRIPE_KEY=""
-STRIPE_ENDPOINT_SECRET=""
+STRIPE_KEY=“”
+STRIPE_ENDPOINT_SECRET=“”
