[WIP] setup and send telemetry data

--- a/payments/.env
+++ b/payments/.env
@@ -1,6 +1,7 @@
+GRPC_ADDR="localhost:3001"
+JAEGER_ADDR="localhost:4318"
 GATEWAY_HTTP_ADDR="http://localhost:8000"
 HTTP_ADDR="localhost:8001"
-GRPC_ADDR="localhost:3001"
 CONSUL_ADDR="localhost:8500"
 AMQP_USER="guest"
 AMQP_PASS="guest"
