--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,23 @@ services:
     ports:
       - "16686:16686"
       - "4318:4318"
+
+  orders-mongo:
+    image: "mongo:7.0.8"
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+    ports:
+      - 27018:27017
+
+  mongo-express:
+    image: "mongo-express"
+    restart: always
+    ports:
+      - 8082:8081
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@orders-mongo:27017/
+      ME_CONFIG_BASICAUTH: false
