--- a/orders/.env
+++ b/orders/.env
@@ -5,3 +5,7 @@ AMQP_USER="guest"
 AMQP_PASS="guest"
 AMQP_HOST="localhost"
 AMQP_PORT="5672"
+MONGO_USER="root"
+MONGO_PASS="example"
+MONGO_HOST="localhost"
+MONGO_PORT="27018"
